--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -6,6 +6,7 @@ on:
       - master
     paths:
       - "packages/container/**"
+      - ".github/workflows/deploy-container.yml"
 
 defaults:
   run:
