--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -17,8 +17,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - run: npm install
+      - uses: actions/checkout@v4
+      - run: npm ci
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
