--- a/.github/workflows/marketing.yml
+++ b/.github/workflows/marketing.yml
@@ -19,7 +19,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - run: npm install
+      - run: npm ci
       - run: npm run build
 
       - uses: shinyinc/action-aws-cli@v1.2
